# python-project-49

./: .flake8  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: __init__.py  cli.py  game_logic.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
